first react commit

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "my-burger-project",
-  "homepage": "https://Prateek-web-boot.github.io/My-Burger",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -57,9 +56,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
     "collectCoverageFrom": [
